--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Cloth"
         tools:targetApi="31">
         <activity
+            android:name=".ClothingCareActivity"
+            android:exported="false" />
+        <activity
+            android:name=".VirtualClosetActivity"
+            android:exported="false" />
+        <activity
             android:name=".ShowOutfitActivity"
             android:exported="false" />
         <activity
