--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,12 @@
         android:theme="@style/Theme.Cloth"
         tools:targetApi="31">
         <activity
+            android:name=".GeneratedOutfitActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SplashActivity"
+            android:exported="false" />
+        <activity
             android:name=".ClothingCareExtensionActivity"
             android:exported="false" />
         <activity
